--- a/src/skills/Skills.module.css
+++ b/src/skills/Skills.module.css
@@ -1,5 +1,5 @@
 .titleBlock {
-    padding: 8px 0 32px 0;
+    padding: 32px 0 32px 0;
     margin: 0 auto;
 }
 
